[gd_scene load_steps=17 format=2]

[ext_resource path="res://actors/BeatEmUpActor.gd" type="Script" id=1]
[ext_resource path="res://areas/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://actors/Walk.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/hammer_sfx.tres" type="AudioStream" id=4]
[ext_resource path="res://actors/Attack.gd" type="Script" id=5]
[ext_resource path="res://actors/HitBox.gd" type="Script" id=6]
[ext_resource path="res://actors/HurtBox.gd" type="Script" id=7]
[ext_resource path="res://actors/Health.gd" type="Script" id=8]
[ext_resource path="res://actors/enemies/Sight.gd" type="Script" id=9]
[ext_resource path="res://actors/enemies/Brain.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "AttackHammer"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 4, -4 ), Vector2( -4, -4 ), Vector2( 4, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.45, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 2, 1 ),
"update": 0,
"values": [ 30.0, 60.0, -105.0, -90.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -4 ), Vector2( 4, -4 ), Vector2( -4, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponRight:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.45, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 105.0, 90.0, -30.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Attack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "execute"
}, {
"args": [  ],
"method": "stop"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("Attack/SFX")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.45 )
}

[sub_resource type="CircleShape2D" id=12]
radius = 22.0145

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 8 )

[sub_resource type="CircleShape2D" id=4]
radius = 44.0454

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.101961, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[node name="BigOrc" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, -4, 4, -4, 4, 0, -4, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 96, 176, 32, 32 )

[node name="Walk" type="Node" parent="."]
script = ExtResource( 3 )
actor_path = NodePath("../../BigOrc")
speed = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/AttackHammer = SubResource( 1 )

[node name="WeaponLeft" type="Sprite" parent="."]
position = Vector2( 4, -4 )
rotation = 0.523599
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
flip_h = true
region_enabled = true
region_rect = Rect2( 240, 8, 16, 40 )

[node name="WeaponRight" type="Sprite" parent="."]
visible = false
position = Vector2( -4, -4 )
rotation = -0.523599
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 240, 8, 16, 40 )

[node name="Attack" type="Node2D" parent="."]
script = ExtResource( 5 )
actor_path = NodePath("../../BigOrc")

[node name="SFX" type="AudioStreamPlayer2D" parent="Attack"]
stream = ExtResource( 4 )
pitch_scale = 0.2

[node name="HitBox" type="Area2D" parent="Attack" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )
damage = 7

[node name="Left" type="CollisionShape2D" parent="Attack/HitBox"]
position = Vector2( -14, -5.2 )
shape = SubResource( 12 )
disabled = true

[node name="Right" type="CollisionShape2D" parent="Attack/HitBox"]
position = Vector2( 14, -5.2 )
shape = SubResource( 12 )
disabled = true

[node name="CoolDown" type="Timer" parent="Attack"]
wait_time = 2.0
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )
health_path = NodePath("../../BigOrc/Health")
team = "enemy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 8 )
max_health = 12

[node name="Sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 9 )

[node name="Range" type="CollisionShape2D" parent="Sight"]
position = Vector2( 0, -8 )
shape = SubResource( 4 )

[node name="Brain" type="Node" parent="."]
script = ExtResource( 10 )
body_path = NodePath("../../BigOrc")
sprite_path = NodePath("../../BigOrc/Sprite")
walk_path = NodePath("../../BigOrc/Walk")
attack_path = NodePath("../../BigOrc/Attack")
animator_path = NodePath("../../BigOrc/AnimationPlayer")
attack_range = 32.0

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -10.0
margin_top = 1.2
margin_right = 10.0
margin_bottom = 3.2
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
max_value = 12.0
step = 1.0
value = 12.0
rounded = true
percent_visible = false
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="amount_changed" from="Health" to="HealthBar" method="set_value"]
[connection signal="depleated" from="Health" to="." method="queue_free"]
[connection signal="area_entered" from="Sight" to="Sight" method="_on_area_entered"]
[connection signal="area_exited" from="Sight" to="Sight" method="_on_area_exited"]
[connection signal="missed" from="Sight" to="Brain" method="_on_Sight_missed"]
[connection signal="spotted" from="Sight" to="Brain" method="_on_Sight_spotted"]
[connection signal="turn_left" from="Brain" to="WeaponLeft" method="show"]
[connection signal="turn_left" from="Brain" to="WeaponRight" method="hide"]
[connection signal="turn_left" from="Brain" to="Sprite" method="set_flip_h" binds= [ false ]]
[connection signal="turn_right" from="Brain" to="WeaponLeft" method="hide"]
[connection signal="turn_right" from="Brain" to="WeaponRight" method="show"]
[connection signal="turn_right" from="Brain" to="Sprite" method="set_flip_h" binds= [ true ]]
